Fixes and Enhancements since Version 0.5 alpha 2

 Changed, Enhanced, or Newly Deprecated Features

 - There is now a 'storage.DMFor(class)' function that returns a configuration
   key for registering or looking up data managers by class.  You can use the
   returned key in a binding's 'offerAs' list, or as the target of a 'bindTo()'
   or 'lookupComponent()'.  The key is constructed using
   'config.ProviderOf(storage.IDataManager,class)'.

 - You can now register utilities that are keyed by the combination of an
   interface and one or more classes, using 'config.ProviderOf(iface,*classes)'
   as a configuration key.  Providers are registered under an '(iface,klass)'
   tuple for each specified class, and looked up using the MRO order of the
   class specified for lookup.  In other words, searching for a provider will
   find a provider for the requested class, or one of its base classes, with
   precedence given to the more-specific provider.  This is primarily intended
   for services like data managers and Specialists.

 - It's now possible to extend .ini file parsing with custom section types,
   and PEAK defines its own built-in section types using this extension
   mechanism.  Custom section types must include at least one space, (e.g.
   '[My Section]') or they will be treated as a plain property name.
   See the 'peak.config.iniFile.sectionParsers' section in 'peak.ini' for
   more details, along with the 'config.ISettingParser' and 'config.IIniParser'
   interfaces.

 - When creating a 'PropertyName()', it's now possible to force conversion of
   invalid characters to '_', using the 'PropertyName.fromString()'
   constructor.  (Note that the input must be a plain-ASCII string.)  Unless
   you request that wildcards ('?' and '*') be kept, they will also be
   converted to '_' characters.  This can be convenient for converting things
   like filenames or text that might contain spaces, to property names.
